# gravica

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: docs.yml
benchmarks/: plot_benchmarks.py  results.json  run_benchmarks.py
docs/: conf.py  index.rst
docs/api/: check.rst  christoffel.rst  display.rst  einstein.rst  geodesic.rst  index.rst  indexing.rst  kretschner.rst  metric.rst  metrics.rst  ricci.rst  riemann.rst  schouten.rst  simplify.rst  stress_energy.rst  weyl.rst
src/atlas/: __init__.py  christoffel.py  einstein.py  metric.py  ricci.py  riemann.py  simplify.py  weyl.py
src/atlas/metrics/: __init__.py  flrw.py  godel.py  kerr.py  minkowski.py  schwarzschild.py
src/gravica/: __init__.py  check.py  christoffel.py  display.py  einstein.py  geodesic.py  indexing.py  kretschner.py  metric.py  ricci.py  riemann.py  schouten.py  simplify.py  stress_energy.py  weyl.py
src/gravica/metrics/: __init__.py  _symbols.py  anti_de_sitter.py  de_sitter.py  flrw.py  godel.py  kerr.py  minkowski.py  reissner_nordstrom.py  schwarzschild.py
tests/: conftest.py  test_anti_de_sitter.py  test_bianchi.py  test_christoffel.py  test_cross_validation.py  test_de_sitter.py  test_einstein.py  test_flrw.py  test_friedmann.py  test_geodesic.py  test_godel.py  test_indexing.py  test_kerr.py  test_kretschner.py  test_metric.py  test_reissner_nordstrom.py  test_ricci.py  test_riemann.py  test_schouten.py  test_stress_energy.py  test_weyl.py
tutorials/: cosmology_flrw.ipynb  geodesic_equations.ipynb  getting_started.ipynb  index_manipulation.ipynb  kerr_black_hole.ipynb  predefined_metrics.ipynb  weyl_and_kretschner.ipynb
