[project]
name = "atlas"
version = "0.1.0"
description = "General Relativity computation library built on Symbolica"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "symbolica>=1.4.0",
]

[dependency-groups]
dev = [
    "einsteinpy>=0.4.0",
    "matplotlib>=3.10.8",
    "pytest>=9.0.2",
    "sympy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atlas"]
