[project]
name = "gravica"
version = "0.1.0"
description = "General Relativity computation library built on Symbolica"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "JIJINBEI", email = "hallucigenia2002@gmail.com" },
]
keywords = ["general-relativity", "tensor", "symbolic-computation", "physics", "differential-geometry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "symbolica>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/jijinbei/gravica"
Documentation = "https://site.jijinbei.jp/gravica/"
Repository = "https://github.com/jijinbei/gravica"
Issues = "https://github.com/jijinbei/gravica/issues"

[dependency-groups]
dev = [
    "einsteinpy>=0.4.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
    "sympy>=1.14.0",
    "twine>=6.2.0",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "furo",
    "sphinx-autodoc-typehints",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint.per-file-ignores]
"tutorials/*.ipynb" = ["E402"]

[tool.hatch.build.targets.wheel]
packages = ["src/gravica"]
